2011-08-23  Sam Steingold  <sds@gnu.org>

	* alltest.tst (lambda-parameters-limit): limit to 512 on mingw

2011-08-19  Sam Steingold  <sds@gnu.org>

	* socket.tst: check os-error-code

2011-08-05  Sam Steingold  <sds@gnu.org>

	* loop.tst: fix the 2011-03-31 patch

2011-08-03  Sam Steingold  <sds@gnu.org>

	* loop.tst: warn on REPEAT before FOR (bug#3384698)

2011-08-02  Sam Steingold  <sds@gnu.org>

	* conditions.tst: better argument checking of FUNCALL on
	LAMBDA (bug#3384693)

2011-08-02  Sam Steingold  <sds@gnu.org>

	* conditions.tst: do not ignore user-supplied print methods for
	user-defined SIMPLE-CONDITIONs (bug#3384825)

2011-08-01  Sam Steingold  <sds@gnu.org>

	* pack11.tst (*modules*) [clisp]: boot linking set contains only
	"clisp" module and *modules* is NIL; base and full have more
	Reported by Barry Fishman <barry_fishman@acm.org>

2011-05-20  Sam Steingold  <sds@gnu.org>

	* ext-clisp.tst: guard the *current-language* test with #+:gettext

2011-05-16  Sam Steingold  <sds@gnu.org>

	* ext-clisp.tst: check that setting *current-language* actually works

2011-04-22  Sam Steingold  <sds@gnu.org>

	* setf.tst: bug#3291585 (setf (values (values) ...) ...)

2011-04-15  Sam Steingold  <sds@gnu.org>

	* macro8.tst: more checks for compiler warnings

2011-04-12  Sam Steingold  <sds@gnu.org>

	* path.tst (test-weird-pathnames): *PATHNAME-ENCODING* is a
	constant on Mac OS X

2011-04-10  Sam Steingold  <sds@gnu.org>

	* socket.tst (ECONNRESET/EPIPE): on some machines SOCKET-STATUS
	after ECONNRESET returns :EOF and on others it returns :APPEND

2011-04-06  Sam Steingold  <sds@gnu.org>

	* socket.tst: add an IPC test which triggers ECONNRESET and EPIPE
	* econnreset.lisp: remove (never used)

2011-03-31  Sam Steingold  <sds@gnu.org>

	* tests.lisp (handler-return): add
	* bind.tst, conditions.tst, path.tst, streamslong.tst: use it

2011-03-30  Sam Steingold  <sds@gnu.org>

	* restarts.tst (handler-use-value): add and use throughout
