@@ -1,5 +1,10 @@
 2011-08-23  Sam Steingold  <sds@gnu.org>
 
+	* tests.lisp (check-os-error): add
+	* socket.tst: use it
+
+2011-08-23  Sam Steingold  <sds@gnu.org>
+
 	* alltest.tst (lambda-parameters-limit): limit to 512 on mingw
 
 2011-08-19  Sam Steingold  <sds@gnu.org>
